Fix InstantService not refreshing TopSites when kNtpTilesFeature enabled

InstantService is the only caller of MostVisitedSites::Refresh() and it
is obvious from the caller's side that TopSites should be refreshed too,
when an NTP is opened. Prior to this patch, TopSites would be updated
time-based, leading to more stale NTP tiles when the feature
kNtpTilesFeature is enabled (non-default case).

The bug is believed to make little impact.

Bug: 741431
Change-Id: Iccdc4f89d3ab430eafd9a2faf1b1564f363ff29f
Reviewed-on: https://chromium-review.googlesource.com/581147
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488647}
Former-commit-id: 1d90c8175b1f4057e0e38afca54eeb65f0e2b25c