chrome/browser/ntp_tiles/ntp_tiles_browsertest.cc
@@ -149,9 +149,7 @@ IN_PROC_BROWSER_TEST_F(NTPTilesTest, NavigateAfterSettingObserver) {
       browser(), page_url, WindowOpenDisposition::CURRENT_TAB,
       ui_test_utils::BROWSER_TEST_WAIT_FOR_NAVIGATION);
 
-  // TODO(crbug.com/741431): When Refresh calls SyncWithHistory() for signed
-  // out users, replace the call below with most_visited_sites_->Refresh().
-  most_visited_sites_->top_sites()->SyncWithHistory();
+  most_visited_sites_->Refresh();
   NTPTilesVector tiles = waiter.WaitForTiles();
   EXPECT_THAT(tiles, Contains(MatchesTile("OK", page_url.spec().c_str(),
                                           TileSource::TOP_SITES)));
